--- a/history.txt
+++ b/history.txt
@@ -31,3 +31,10 @@
    31  git status
    32  history
    33  history > history.txt
+   34  ls
+   35  git status
+   36  git add *
+   37  git commit -m "Adding the history of commands"
+   38  git push origin master
+   39  git pull origin master
+   40  history > history.txt 
